--- a/css/style.css
+++ b/css/style.css
@@ -43,14 +43,20 @@ body {
 
 #data {
 	color: #fff;
-	margin-top: 50px;
+	
 	font-family: "Helvetica", sans-serif;
 }
 
+#created {
+	color: #fff;
+	margin: 50px 0px 0px 0px;
+	font-family: "Futura", "Helvetica", sans-serif;
+}
+/* 
 #score {
-	margin-right: 50px;
+	margin-right: 50px !important;
 }
 
 #lives {
-	margin-left: 50px;	
-}
+	margin-left: 50px !important;	
+} */
